[package]
name = "test-scrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrap = { path = 'D:\miniliuke\coding\rust\scrap-master'}
ratelimit_meter = "5.0.0"
ratelimit_rs = "0.1.4"
ffmpeg-next = {version = "6.0.0"}

ffmpeg-sys-next = "6.0.0"
dcv-color-primitives = "0.5.3"